--- a/server-laravel/public/css/styles.css
+++ b/server-laravel/public/css/styles.css
@@ -439,6 +439,10 @@ button:hover {
 /* =========================================== */
 /* Login Page styles */
 /* =========================================== */
+.loginBanner {
+  margin-bottom: 20px;
+}
+
 .centralHeader {
     width: 100%;
     height: 100%;
@@ -452,8 +456,7 @@ button:hover {
 }
 
 .centralLogo {
-    width: 300px;
-    height: 200px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -461,16 +464,17 @@ button:hover {
     z-index: 10;
 
     img {
-        width: 100px;
-        height: 100px;
+        width: 90px;
+        height: 90px;
         object-fit: contain;
     }
 
     .logoText {
-        font-family: "DT Getai Grotesk Display", sans-serif;
-        font-size: 80px;
-        color: white;
-        line-height: 40px;
+      font-family: "DT Getai Grotesk Display", sans-serif;
+      font-size: 100px;
+      color: white;
+      height: auto;
+      margin-top: 20px;
     }
 }
 
@@ -478,6 +482,8 @@ button:hover {
     font-family: "Outfit", "Inter", sans-serif;
     font-size: 26px;
     z-index: 10;
+    font-weight: bold;
+    letter-spacing: 1px;
 }
 
 .loginButtons {
