--- a/server-laravel/public/css/styles.css
+++ b/server-laravel/public/css/styles.css
@@ -7,6 +7,7 @@
     --transparent-highlight: rgba(255, 255, 255, 0.8);
     --selectable-highlight: #45286e;
     --complete-highlight: #11ab45;
+    --login-background-purple: #734DFF;
 }
 
 /* =========================================== */
@@ -56,12 +57,6 @@
 /* =========================================== */
 /* Common styles */
 /* =========================================== */
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 * {
     margin: 0;
     padding: 0;
@@ -71,6 +66,7 @@ html,
 body {
     height: 100%;
     font-family: "Inter", sans-serif;
+    overflow: hidden;
 }
 
 /* Hide all scrollbars everywhere */
@@ -282,7 +278,6 @@ html::-webkit-scrollbar,
 .pageWrapper {
     display: flex;
     height: calc(100vh - 80px);
-    overflow: hidden;
     background-color: var(--content-background-purple);
 }
 
@@ -292,6 +287,13 @@ html::-webkit-scrollbar,
     display: flex;
     overflow: hidden;
     background-color: var(--content-background-purple);
+
+    .pageContent {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
 }
 
 .pageContent {
@@ -308,6 +310,7 @@ html::-webkit-scrollbar,
     width: 100%;
     position: relative;
     margin-top: 10px;
+    cursor: default;
 
     h2 {
         font-size: 28px;
@@ -315,7 +318,7 @@ html::-webkit-scrollbar,
 }
 
 .close {
-    display: none;
+    display: none !important;
 }
 
 button {
@@ -332,25 +335,24 @@ button:hover {
 }
 
 .largeCard {
+  position: relative;
     width: 580px;
     height: 600px;
     background-color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     border-radius: 20px;
-    padding: 20px;
+    margin: 0 auto;
+    padding: 30px;
+    z-index: 99;
 
     .closeButton {
         position: absolute;
-        top: 20px;
-        right: 20px;
-        width: 30px;
-        height: 30px;
-        background-color: var(--active-highlight-purple);
+        top: 30px;
+        right: 30px;
+        width: 35px;
+        height: 35px;
+        background-color: var(--login-background-purple);
         border: none;
-        border-radius: 30px;
+        border-radius: 35px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -358,42 +360,40 @@ button:hover {
         color: white;
         font-weight: bold;
         font-family: "DT Getai Grotesk Display", sans-serif;
-        line-height: 30px;
+        font-size: 16px;
     }
 
     h2 {
-        margin: 20px 0;
-        font-size: 24px;
+        margin: 20px 0 40px 0;
+        font-size: 34px;
         font-weight: bold;
         color: black;
         text-align: center;
+        font-family: 'Outfit', 'Inter', sans-serif;
     }
 
     form {
         display: flex;
         flex-direction: column;
         gap: 15px;
+        flex: 1 1 0;
+        height: 100%;
 
         .inputGroup {
             display: flex;
             flex-direction: column;
-            gap: 5px;
-
-            label {
-                font-size: 14px;
-                font-weight: 600;
-                color: black;
-            }
+            gap: 10px;
+            flex: 1 0 0;
 
             input,
             select,
             textarea {
                 padding: 10px;
-                border: 1px solid var(--border-highlight);
-                background-color: var(--border-highlight);
+                border: 1px solid;
                 border-radius: 5px;
-                font-size: 14px;
+                font-size: 18px;
                 outline: none;
+                font-family: 'Outfit', 'Inter', sans-serif;
             }
 
             input:focus,
@@ -410,11 +410,13 @@ button:hover {
         }
 
         .submitButton {
-            width: 120px;
+            width: 80%;
             height: 40px;
             font-size: 16px;
+            font-weight: bold;
             align-self: center;
-            background-color: var(--active-highlight-purple);
+            color: white;
+            background-color: var(--login-background-purple);
             border: 2px solid var(--border-highlight);
             margin-top: 10px;
         }
@@ -430,10 +432,12 @@ button:hover {
 .fullscreenWidget {
     width: 100%;
     min-height: 300px;
+    max-height: calc(100vh - 200px);
     background-color: var(--background-purple);
     border-radius: 12px;
     padding: 20px;
     margin-top: 20px;
+    overflow-y: auto;
 }
 
 /* =========================================== */
@@ -441,18 +445,18 @@ button:hover {
 /* =========================================== */
 .loginBanner {
   margin-bottom: 20px;
+  z-index: 90;
 }
 
 .centralHeader {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 20px;
     text-align: center;
-    z-index: 10;
+    z-index: 90;
 }
 
 .centralLogo {
@@ -591,6 +595,7 @@ button:hover {
     width: 100%;
     text-align: center;
     margin: 30px 0;
+    cursor: default;
 }
 
 /* Widget Area Styles */
@@ -614,6 +619,7 @@ button:hover {
 .widgetHeader {
     padding-bottom: 10px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+    cursor: default;
 
     h3 {
         font-size: 22px;
@@ -622,6 +628,7 @@ button:hover {
 
 .widgetFooter {
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 /* Home Inbox Widget Styles */
@@ -744,7 +751,6 @@ button:hover {
 
 .patientCard {
     width: 100%;
-    min-height: 300px;
     border-bottom: 2px solid var(--border-highlight);
 
     .patientActionCenter {
