--- a/server-laravel/public/css/styles.css
+++ b/server-laravel/public/css/styles.css
@@ -8,6 +8,8 @@
     --selectable-highlight: #45286e;
     --complete-highlight: #11ab45;
     --login-background-purple: #734DFF;
+    --input-gray: #E1E1E1;
+    --input-text-gray: #676767;
 }
 
 /* =========================================== */
@@ -334,7 +336,7 @@ button:hover {
     border: 1px solid white;
 }
 
-.largeCard {
+.loginPageCard {
   position: relative;
     width: 580px;
     height: 600px;
@@ -423,6 +425,162 @@ button:hover {
 
         .submitButton:hover {
             background-color: white;
+            color: var(--active-highlight-purple);
+            border: 2px solid var(--active-highlight-purple);
+        }
+    }
+}
+
+.largeCard {
+  position: absolute;
+    width: 580px;
+    height: 600px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border-radius: 20px;
+    margin: 0 auto;
+    padding: 30px;
+    z-index: 99;
+
+    .closeButton {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        width: 35px;
+        height: 35px;
+        background-color: black;
+        border: none;
+        border-radius: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        color: white;
+        font-weight: bold;
+        font-family: "DT Getai Grotesk Display", sans-serif;
+        font-size: 16px;
+    }
+
+    h2 {
+        margin: 20px 0 40px 0;
+        font-size: 34px;
+        font-weight: bold;
+        color: black;
+        text-align: center;
+        font-family: 'Outfit', 'Inter', sans-serif;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        flex: 1 1 0;
+        height: 100%;
+
+        .formInputs {
+            display: flex;
+            flex-direction: column;
+            flex: 1 0 0;
+            gap: 20px;
+        }
+
+        .patientIDRow {
+            display: flex;
+            gap: 10px;
+
+            label {
+                color: black;
+                font-family: 'Outfit', 'Inter', sans-serif;
+            }
+        }
+
+        .inputGroup {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+
+            label {
+                color: black;
+                font-family: 'Outfit', 'Inter', sans-serif;
+            }
+        }
+
+        input,
+        select,
+        textarea {
+            padding: 10px;
+            border: 1px solid;
+            background-color: var(--input-gray);
+            color: var(--input-text-gray);
+            border-radius: 5px;
+            font-size: 18px;
+            outline: none;
+            font-family: 'Outfit', 'Inter', sans-serif;
+        }
+
+        input:focus,
+        select:focus,
+        textarea:focus {
+            border: 1px solid var(--active-highlight-purple);
+            box-shadow: 0 0 8px var(--active-highlight-purple);
+        }
+
+        textarea {
+            resize: vertical;
+            min-height: 80px;
+            max-height: 200px;
+        }
+
+        select {
+            width: 30%;
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            background-repeat: no-repeat;
+            background-position: right 10px center;
+            background-size: 16px;
+        }
+
+        .submitButtons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .submitButton {
+            width: 200px;
+            height: 40px;
+            font-size: 16px;
+            font-weight: bold;
+            align-self: center;
+            color: white;
+            background-color: var(--active-highlight-purple);
+            border: 2px solid var(--border-highlight);
+            margin-top: 10px;
+        }
+
+        .submitButton:hover {
+            background-color: white;
+            color: var(--active-highlight-purple);
+            border: 2px solid var(--active-highlight-purple);
+        }
+
+        .cancelButton {
+            width: 160px;
+            height: 40px;
+            font-size: 16px;
+            font-weight: bold;
+            align-self: center;
+            color: black;
+            background-color: white;
+            border: 2px solid var(--border-highlight);
+            margin-top: 10px;
+        }
+
+        .cancelButton:hover {
+            background-color: var(--input-gray);
             color: var(--active-highlight-purple);
             border: 2px solid var(--active-highlight-purple);
         }
