--- a/server-laravel/public/css/styles.css
+++ b/server-laravel/public/css/styles.css
@@ -7,8 +7,8 @@
     --transparent-highlight: rgba(255, 255, 255, 0.8);
     --selectable-highlight: #45286e;
     --complete-highlight: #11ab45;
-    --login-background-purple: #734DFF;
-    --input-gray: #E1E1E1;
+    --login-background-purple: #734dff;
+    --input-gray: #e1e1e1;
     --input-text-gray: #676767;
 }
 
@@ -19,7 +19,8 @@
 /* Inter Font */
 @font-face {
     font-family: "Inter";
-    src: url("/assets/fonts/Inter/Inter-VariableFont_opsz\,wght.ttf") format("truetype");
+    src: url("/assets/fonts/Inter/Inter-VariableFont_opsz\,wght.ttf")
+        format("truetype");
     font-weight: 100 900;
     font-style: normal;
     font-display: swap;
@@ -28,7 +29,8 @@
 /* Italic Inter Fontt */
 @font-face {
     font-family: "Inter";
-    src: url("/assets/fonts/Inter/Inter-Italic-VariableFont_opsz\,wght.ttf") format("truetype");
+    src: url("/assets/fonts/Inter/Inter-Italic-VariableFont_opsz\,wght.ttf")
+        format("truetype");
     font-weight: 100 900;
     font-style: italic;
     font-display: swap;
@@ -37,7 +39,8 @@
 /* DT Getai Grotesk Display for logo */
 @font-face {
     font-family: "DT Getai Grotesk Display";
-    src: url("/assets/fonts/getaiGrotesk/DTGetaiGroteskDisplay-Black.ttf") format("truetype");
+    src: url("/assets/fonts/getaiGrotesk/DTGetaiGroteskDisplay-Black.ttf")
+        format("truetype");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -46,7 +49,8 @@
 /* Outfit Font */
 @font-face {
     font-family: "Outfit";
-    src: url("/assets/fonts/Outfit/Outfit-VariableFont_wght.ttf") format("truetype");
+    src: url("/assets/fonts/Outfit/Outfit-VariableFont_wght.ttf")
+        format("truetype");
     font-weight: 100 900;
     font-style: normal;
     font-display: swap;
@@ -370,7 +374,7 @@ button:hover {
         font-weight: bold;
         color: black;
         text-align: center;
-        font-family: 'Outfit', 'Inter', sans-serif;
+        font-family: "Outfit", "Inter", sans-serif;
     }
 
     form {
@@ -394,7 +398,7 @@ button:hover {
                 border-radius: 5px;
                 font-size: 18px;
                 outline: none;
-                font-family: 'Outfit', 'Inter', sans-serif;
+                font-family: "Outfit", "Inter", sans-serif;
             }
 
             input:focus,
@@ -478,7 +482,7 @@ button:hover {
         font-weight: bold;
         color: black;
         text-align: center;
-        font-family: 'Outfit', 'Inter', sans-serif;
+        font-family: "Outfit", "Inter", sans-serif;
     }
 
     form {
@@ -501,7 +505,7 @@ button:hover {
 
             label {
                 color: black;
-                font-family: 'Outfit', 'Inter', sans-serif;
+                font-family: "Outfit", "Inter", sans-serif;
             }
         }
 
@@ -513,7 +517,7 @@ button:hover {
 
             label {
                 color: black;
-                font-family: 'Outfit', 'Inter', sans-serif;
+                font-family: "Outfit", "Inter", sans-serif;
             }
         }
 
@@ -527,7 +531,7 @@ button:hover {
             border-radius: 5px;
             font-size: 18px;
             outline: none;
-            font-family: 'Outfit', 'Inter', sans-serif;
+            font-family: "Outfit", "Inter", sans-serif;
         }
 
         input:focus,
@@ -606,7 +610,6 @@ button:hover {
             border: 2px solid var(--active-highlight-purple);
         }
     }
-
 
     /* For confirmation pop ups */
     .confirmation {
