--- a/server-laravel/public/css/styles.css
+++ b/server-laravel/public/css/styles.css
@@ -194,7 +194,7 @@ html::-webkit-scrollbar,
             }
 
             .search-card small {
-                color: #777;
+                color: #afafaf;
             }
         }
 
@@ -396,6 +396,12 @@ html::-webkit-scrollbar,
 
 .close {
     display: none !important;
+}
+
+.highlight {
+    outline: 3px solid var(--active-highlight-purple);
+    background-color: var(--selectable-highlight);
+    transition: all 0.6s ease;
 }
 
 button {
