--- a/server-laravel/public/css/styles.css
+++ b/server-laravel/public/css/styles.css
@@ -791,6 +791,14 @@ button:hover {
     overflow-y: auto;
 }
 
+.emptyWidget {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* =========================================== */
 /* Login Page styles */
 /* =========================================== */
@@ -1093,6 +1101,7 @@ button:hover {
         align-items: center;
         gap: 5px;
         flex: 1 1 0;
+        max-width: 100px;
 
         .verifyText {
             color: white;
