--- a/server-laravel/public/css/styles.css
+++ b/server-laravel/public/css/styles.css
@@ -22,7 +22,8 @@
 /* Inter Font */
 @font-face {
     font-family: "Inter";
-    src: url("/assets/fonts/Inter/Inter-VariableFont_opsz\,wght.ttf") format("truetype");
+    src: url("/assets/fonts/Inter/Inter-VariableFont_opsz\,wght.ttf")
+        format("truetype");
     font-weight: 100 900;
     font-style: normal;
     font-display: swap;
@@ -31,7 +32,8 @@
 /* Italic Inter Fontt */
 @font-face {
     font-family: "Inter";
-    src: url("/assets/fonts/Inter/Inter-Italic-VariableFont_opsz\,wght.ttf") format("truetype");
+    src: url("/assets/fonts/Inter/Inter-Italic-VariableFont_opsz\,wght.ttf")
+        format("truetype");
     font-weight: 100 900;
     font-style: italic;
     font-display: swap;
@@ -40,7 +42,8 @@
 /* DT Getai Grotesk Display for logo */
 @font-face {
     font-family: "DT Getai Grotesk Display";
-    src: url("/assets/fonts/getaiGrotesk/DTGetaiGroteskDisplay-Black.ttf") format("truetype");
+    src: url("/assets/fonts/getaiGrotesk/DTGetaiGroteskDisplay-Black.ttf")
+        format("truetype");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -49,7 +52,8 @@
 /* Outfit Font */
 @font-face {
     font-family: "Outfit";
-    src: url("/assets/fonts/Outfit/Outfit-VariableFont_wght.ttf") format("truetype");
+    src: url("/assets/fonts/Outfit/Outfit-VariableFont_wght.ttf")
+        format("truetype");
     font-weight: 100 900;
     font-style: normal;
     font-display: swap;
@@ -799,6 +803,18 @@ button:hover {
     align-items: center;
 }
 
+.emptyFullscreenWidget {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    h3 {
+        font-size: 30px;
+    }
+}
+
 /* =========================================== */
 /* Login Page styles */
 /* =========================================== */
@@ -1086,11 +1102,13 @@ button:hover {
         background-color: var(--complete-highlight);
     }
 
-    .overdueStatus {
+    .overdueStatus,
+    .skippedStatus {
         background-color: var(--overdue-highlight);
     }
 
-    .generalStatus {
+    .generalStatus,
+    .incompleteStatus {
         background-color: var(--general-highlight);
     }
 
