--- a/server-laravel/public/css/styles.css
+++ b/server-laravel/public/css/styles.css
@@ -1130,6 +1130,7 @@ button:hover {
         gap: 5px;
         flex: 1 1 0;
         max-width: 100px;
+        transition: 3s all ease;
 
         .verifyText {
             color: white;
