--- a/server-laravel/public/css/styles.css
+++ b/server-laravel/public/css/styles.css
@@ -208,11 +208,11 @@ html::-webkit-scrollbar,
             font-weight: bold;
             cursor: pointer;
             line-height: 26px;
+            color: var(--background-purple);
 
             /* Link tag for testing login - REMOVE */
             a {
                 text-decoration: none;
-                color: black;
             }
         }
     }
@@ -1048,7 +1048,8 @@ button:hover {
 }
 
 .widgetFooter {
-    margin-bottom: 10px;
+    margin-bottom: 4px;
+    padding-top: 10px;
     cursor: pointer;
 }
 
@@ -1109,6 +1110,8 @@ button:hover {
         padding: 0 10px;
         cursor: default;
         max-width: 150px;
+        min-width: 110px;
+        text-align: center;
     }
 
     .statusIcon {
